finalized initial frontend design

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/3.8.95/css/materialdesignicons.css">
     <meta charset="utf8">
-    <title>Vue-Design</title>
+    <title>Feedibus</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
