--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,12 @@
 <html>
-    <head>
-        <meta charset="utf8">
-        <title>Login</title>
-    </head>
-    <body>
-        <h1>Login</h1>
-        <form action="/login" method="post">
-            <div>
-                <label for="email">E-Mail</label>
-                <input type="email" name="email" id="email" required>
-            </div>
-            <div>
-                <label for="password">Password</label>
-                <input type="password" name="password" id="password" required>
-            </div>
-            <button type="submit">Anmelden</button>
-        </form>
-        <a href="/register.html">Registrieren</a>
-    </body>
+<head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/3.8.95/css/materialdesignicons.css">
+    <meta charset="utf8">
+    <title>Feedibus</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body>
+    <div id="app"></div>
+    <script src="/js/design.js"></script>
+</body>
 </html>
