--- a/public/home.html
+++ b/public/home.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <div id="app"></div>
-    <script src="/js/general.js"></script>
+    <script src="/js/design.js"></script>
 </body>
 </html>
